[project]
name = "staticserverapi"
version = "0.1.0"
description = ""
authors = [
    {name = "leonardo-lima-98",email = "leonardodelima98@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "staticserverapi", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.14"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
